Integrate gapfiller, fix gapfill bug

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -96,11 +96,11 @@
    "source": [
     "files_root = Path(\"/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/current_netcdfs\")\n",
     "\n",
-    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-02.nc\")\n",
+    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-08.nc\")\n",
     "\n",
     "interp_references = [\n",
-    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-02.nc\"),\n",
-    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-02.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-08.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-08.nc\"),\n",
     "]\n",
     "\n",
     "# mask_nc can be none if you do not need to filter out land currents\n",
@@ -213,7 +213,8 @@
    "source": [
     "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
     "target.fieldset.U.show()  # uninterpolated\n",
-    "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
+    "fs_interp.U.show()  # interpolated, gapfilled, smoothed\n",
+    "fs_interp.V.show()  # interpolated, gapfilled, smoothed"
    ]
   }
  ],
