--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -32,7 +32,8 @@
     "from parcels_utils import HFRGrid, read_netcdf_info\n",
     "from parcels_sim import ParcelsSimulation\n",
     "from parcels_analysis import add_feature_set_to_result\n",
-    "from plot_features import BuoyPathFeature"
+    "from plot_features import BuoyPathFeature\n",
+    "from gapfilling import Gapfiller"
    ]
   },
   {
@@ -51,13 +52,18 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"plume_track.json\",\n",
+    "    \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
-    "    \"buoy_track_704_02.json\",\n",
+    "#     \"buoy_track_704_02.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
-    "grids = [HFRGrid(read_netcdf_info(cfg[\"netcdf_path\"])) for cfg in loaded_configs]\n",
+    "grids = []\n",
+    "for cfg in loaded_configs:\n",
+    "    ds = read_netcdf_info(cfg[\"netcdf_path\"])\n",
+    "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"][\"gapfill_steps\"])\n",
+    "    ds = gapfiller.execute(HFRGrid(ds))\n",
+    "    grids.append(HFRGrid(ds))\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
