Add simple auto index stuff with mat files

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -167,7 +167,11 @@
     "        plotting_cfg = cfg[\"plotting_config\"]\n",
     "        if \"plot_feature_set\" in plotting_cfg and plotting_cfg[\"plot_feature_set\"] not in (None, \"\"):\n",
     "            add_feature_set_to_result(sim.parcels_result, plotting_cfg[\"plot_feature_set\"])\n",
-    "        sim.parcels_result.generate_all_plots(os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name), domain=plotting_cfg[\"shown_domain\"], land=plotting_cfg[\"draw_coasts\"])\n",
+    "        sim.parcels_result.generate_all_plots(\n",
+    "            os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name),\n",
+    "            domain=plotting_cfg[\"shown_domain\"],\n",
+    "            land=plotting_cfg[\"draw_coasts\"]\n",
+    "        )\n",
     "        # comment out the generate_gif line if it doesn't work\n",
     "        print(sim.parcels_result.generate_gif(os.path.join(plotting_cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))"
    ]
