Add extra check to configs

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -142,19 +142,22 @@
     "\n",
     "def handle_postprocessing(result, postprocess_cfg):\n",
     "    if \"coastline\" in postprocess_cfg and postprocess_cfg[\"coastline\"] not in empty:\n",
-    "        # coastline stuff, use to delete particles that collide with a coastline\n",
-    "        lats, lons = utils.load_geo_points(**postprocess_cfg[\"coastline\"])\n",
-    "        result.add_coastline(lats, lons)\n",
-    "        result.process_coastline_collisions()\n",
-    "        print(\"processed collisions\")\n",
+    "        if postprocess_cfg[\"coastline\"][\"path\"] not in (None, \"\"):\n",
+    "            # coastline stuff, use to delete particles that collide with a coastline\n",
+    "            lats, lons = utils.load_geo_points(**postprocess_cfg[\"coastline\"])\n",
+    "            result.add_coastline(lats, lons)\n",
+    "            result.process_coastline_collisions()\n",
+    "            print(\"processed collisions\")\n",
     "    if \"buoy\" in postprocess_cfg and postprocess_cfg[\"buoy\"] not in empty:\n",
-    "        result.add_plot_feature(\n",
-    "            BuoyPathFeature.from_csv(\n",
-    "                postprocess_cfg[\"buoy\"][\"path\"], backstep_delta=np.timedelta64(1, \"h\"), backstep_count=12\n",
-    "            ), \"buoy\"\n",
-    "        )\n",
-    "        result.write_feature_dists([\"buoy\"])\n",
-    "        print(\"processed buoy distances\")\n",
+    "        if postprocess_cfg[\"buoy\"][\"path\"] not in (None, \"\"):\n",
+    "            result.add_plot_feature(\n",
+    "                BuoyPathFeature.from_csv(\n",
+    "                    postprocess_cfg[\"buoy\"][\"path\"], backstep_delta=np.timedelta64(1, \"h\"),\n",
+    "                    backstep_count=12\n",
+    "                ), \"buoy\"\n",
+    "            )\n",
+    "            result.write_feature_dists([\"buoy\"])\n",
+    "            print(\"processed buoy distances\")\n",
     "    result.write_data(override=True)\n",
     "\n",
     "empty = (None, {}, \"\", [])\n",
