--- a/access_thredds_hycom.ipynb
+++ b/access_thredds_hycom.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "80afcf71",
    "metadata": {},
    "outputs": [],
@@ -29,24 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5905fb92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Compiled ParcelsRandom ==> /var/folders/m1/w9l6s0cs1rv7gj9k4t0cffj40000gn/T/parcels-501/libparcels_random_f71bbf6a-894d-4814-b974-70f5cb2329ec.so\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "\n",
+    "import thredds_utils\n",
     "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset"
    ]
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "7471ff03",
    "metadata": {},
    "outputs": [],
@@ -87,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0fe8fafa",
    "metadata": {},
    "outputs": [],
@@ -97,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "8b3e2656",
    "metadata": {},
    "outputs": [],
@@ -107,43 +100,35 @@
     "dropvars = {'water_temp', 'water_temp_bottom','salinity', 'salinity_bottom','water_u_bottom','water_v_bottom','surf_el'}\n",
     "\n",
     "thredds_data = {\n",
-    "    utils.DATA_HYCOMFORE: xr.open_dataset(dataset_url, chunks={\"time\": 1},decode_times=False, drop_variables=dropvars),\n",
+    "    thredds_utils.DATA_HYCOMFORE: xr.open_dataset(dataset_url, chunks={\"time\": 1},decode_times=False, drop_variables=dropvars),\n",
     "}\n",
-    "t0 = np.datetime64(thredds_data[utils.DATA_HYCOMFORE].time.units[12:35])\n",
-    "tmp = thredds_data[utils.DATA_HYCOMFORE].time.data\n",
-    "# thredds_data[utils.DATA_HYCOMFORE][\"timeday\"] = t0 + np.array(tmp,dtype=\"timedelta64[h]\")\n",
-    "thredds_data[utils.DATA_HYCOMFORE][\"t0\"] = np.timedelta64(t0 - np.datetime64('0000-01-01T00:00:00.000'), 'h')/np.timedelta64(1, 'D')\n",
-    "thredds_data[utils.DATA_HYCOMFORE] = thredds_data[utils.DATA_HYCOMFORE].assign_coords(time=(t0 + np.array(tmp,dtype=\"timedelta64[h]\")))\n",
+    "t0 = np.datetime64(thredds_data[thredds_utils.DATA_HYCOMFORE].time.units[12:35])\n",
+    "tmp = thredds_data[thredds_utils.DATA_HYCOMFORE].time.data\n",
+    "# thredds_data[thredds_utils.DATA_HYCOMFORE][\"timeday\"] = t0 + np.array(tmp,dtype=\"timedelta64[h]\")\n",
+    "thredds_data[thredds_utils.DATA_HYCOMFORE][\"t0\"] = np.timedelta64(t0 - np.datetime64('0000-01-01T00:00:00.000'), 'h')/np.timedelta64(1, 'D')\n",
+    "thredds_data[thredds_utils.DATA_HYCOMFORE] = thredds_data[thredds_utils.DATA_HYCOMFORE].assign_coords(time=(t0 + np.array(tmp,dtype=\"timedelta64[h]\")))\n",
     "\n",
     "\n",
-    "thredds_data[utils.DATA_HYCOMFORE][\"time\"].attrs[\"long_name\"] = \"Forecast time\"\n",
-    "thredds_data[utils.DATA_HYCOMFORE][\"time\"].attrs[\"standard_name\"] = \"time\"\n",
-    "thredds_data[utils.DATA_HYCOMFORE][\"time\"].attrs[\"_CoordinateAxisType\"] = \"Time\"\n",
-    "thredds_data[utils.DATA_HYCOMFORE][\"tau\"].attrs[\"units\"] = \"hours since \" + thredds_data[utils.DATA_HYCOMFORE][\"tau\"].time_origin"
+    "thredds_data[thredds_utils.DATA_HYCOMFORE][\"time\"].attrs[\"long_name\"] = \"Forecast time\"\n",
+    "thredds_data[thredds_utils.DATA_HYCOMFORE][\"time\"].attrs[\"standard_name\"] = \"time\"\n",
+    "thredds_data[thredds_utils.DATA_HYCOMFORE][\"time\"].attrs[\"_CoordinateAxisType\"] = \"Time\"\n",
+    "thredds_data[thredds_utils.DATA_HYCOMFORE][\"tau\"].attrs[\"units\"] = \"hours since \" + thredds_data[thredds_utils.DATA_HYCOMFORE][\"tau\"].time_origin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "dbdf0691",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "END OF FORECAST: 2021-09-01T00:00:00.000000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"END OF FORECAST: \"+ str(thredds_data[utils.DATA_HYCOMFORE][\"time\"].data[-1]))\n",
-    "thredds_data[utils.DATA_HYCOMFORE];"
+    "print(\"END OF FORECAST: \"+ str(thredds_data[thredds_utils.DATA_HYCOMFORE][\"time\"].data[-1]))\n",
+    "thredds_data[thredds_utils.DATA_HYCOMFORE];"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c08a1e3c",
    "metadata": {},
    "outputs": [],
@@ -203,30 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0b9850b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "region_data = [\n",
-    "   (currentname, utils.DATA_HYCOMFORE, daterange, (22, 45), (273, 295), (0,0),False)\n",
+    "   (currentname, thredds_utils.DATA_HYCOMFORE, daterange, (22, 45), (273, 295), (0,0),False)\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "953585f2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "region hycom_mwbproj data megabytes: 78.56024932861328\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "regions = []\n",
     "for rd in region_data:\n",
@@ -246,22 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "64f537a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saved to current_netcdfs/HYCOM_forecast/hycom_mwbproj.nc\n",
-      "DONE\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for r in regions:\n",
-    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR / utils.filename_dict[r[\"category\"]])\n",
+    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR)\n",
     "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
@@ -288,9 +256,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "python3"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
