--- a/access_thredds_hycom.ipynb
+++ b/access_thredds_hycom.ipynb
@@ -17,9 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "80afcf71",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:24.823371Z",
+     "start_time": "2021-08-26T21:22:24.159878Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -29,10 +34,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5905fb92",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:27.167400Z",
+     "start_time": "2021-08-26T21:22:24.825474Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Compiled ParcelsRandom ==> /var/folders/mb/hd5ymr3137g2g0chv_x_tvb40000gq/T/parcels-503/libparcels_random_42f48a59-05da-4e1e-b9e4-11130a30f4f4.so\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -60,9 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7471ff03",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:27.207177Z",
+     "start_time": "2021-08-26T21:22:27.170821Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# daterange = (\"2021-08-24T00\", \"2021-09-03T00\");\n",
@@ -80,9 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0fe8fafa",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:27.242051Z",
+     "start_time": "2021-08-26T21:22:27.209645Z"
+    }
+   },
    "outputs": [],
    "source": [
     "dataset_url = \"https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/FMRC/GLBy0.08_930_FMRC_best.ncd\""
@@ -90,9 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8b3e2656",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:27.913854Z",
+     "start_time": "2021-08-26T21:22:27.243970Z"
+    }
+   },
    "outputs": [],
    "source": [
     "num_chunks = 1\n",
@@ -117,10 +150,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dbdf0691",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:27.951471Z",
+     "start_time": "2021-08-26T21:22:27.915767Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "END OF FORECAST: 2021-09-02T00:00:00.000000000\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"END OF FORECAST: \"+ str(thredds_data[thredds_utils.DATA_HYCOMFORE][\"time\"].data[-1]))\n",
     "thredds_data[thredds_utils.DATA_HYCOMFORE];"
@@ -128,9 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c08a1e3c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:27.996680Z",
+     "start_time": "2021-08-26T21:22:27.954529Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_region(data):\n",
@@ -188,9 +239,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0b9850b6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:28.033932Z",
+     "start_time": "2021-08-26T21:22:27.999968Z"
+    }
+   },
    "outputs": [],
    "source": [
     "region_data = [\n",
@@ -200,10 +256,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "953585f2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:22:28.076896Z",
+     "start_time": "2021-08-26T21:22:28.036424Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "region hycom_mwbproj data megabytes: 70.10061645507812\n"
+     ]
+    }
+   ],
    "source": [
     "regions = []\n",
     "for rd in region_data:\n",
@@ -223,10 +292,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "64f537a0",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-26T21:23:02.366579Z",
+     "start_time": "2021-08-26T21:22:28.078898Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved to current_netcdfs/hycom_mwbproj.nc\n",
+      "DONE\n"
+     ]
+    }
+   ],
    "source": [
     "for r in regions:\n",
     "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR)\n",
