Fixes and additions from Django project

--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -32,7 +32,7 @@
     "import xarray as xr\n",
     "\n",
     "import utils\n",
-    "import thredds_utils\n",
+    "from thredds_utils import ThreddsCode, get_thredds_dataset\n",
     "from parcels_utils import xr_dataset_to_fieldset"
    ]
   },
@@ -62,9 +62,9 @@
     "    for m in months:\n",
     "        days = np.arange(m, m + np.timedelta64(1, \"M\"), dtype=\"datetime64[D]\")\n",
     "        timerng = (np.datetime64(days[0], \"h\"), days[-1] + np.timedelta64(23, \"h\"))\n",
-    "        reg1 = (f\"{name}_{m}\", thredds_utils.USWC_1KM_HOURLY, timerng, lat_rng, lon_rng, False)\n",
-    "        reg2 = (f\"{name}_{m}\", thredds_utils.USWC_2KM_HOURLY, timerng, lat_rng, lon_rng, True)\n",
-    "        reg6 = (f\"{name}_{m}\", thredds_utils.USWC_6KM_HOURLY, timerng, lat_rng, lon_rng, True)\n",
+    "        reg1 = (f\"{name}_{m}\", ThreddsCode.USWC_1KM_HOURLY, timerng, lat_rng, lon_rng, False)\n",
+    "        reg2 = (f\"{name}_{m}\", ThreddsCode.USWC_2KM_HOURLY, timerng, lat_rng, lon_rng, True)\n",
+    "        reg6 = (f\"{name}_{m}\", ThreddsCode.USWC_6KM_HOURLY, timerng, lat_rng, lon_rng, True)\n",
     "        regions.append(reg1)\n",
     "        regions.append(reg2)\n",
     "        regions.append(reg6)\n",
@@ -100,18 +100,18 @@
     "# tuple reference\n",
     "# (name, region code, time range, lat range, lon range, include domain endpoints)\n",
     "region_data = [\n",
-    "#     (\"tj_sample\", thredds_utils.USWC_1KM_HOURLY, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "#     (\"tj_plume\", thredds_utils.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "#     (\"tj_plume\", thredds_utils.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tj_plume\", thredds_utils.USWC_6KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tijuana_river\", thredds_utils.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river\", thredds_utils.USWC_2KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river\", thredds_utils.USWC_6KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "#     (\"tijuana_river_small\", utils.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
-    "#     (\"tijuana_river_now\", thredds_utils.USWC_1KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river_now\", thredds_utils.USWC_2KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river_now\", thredds_utils.USWC_6KM_HOURLY, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "    (\"missing_buoy\", thredds_utils.USWC_6KM_HOURLY, (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
+    "    (\"tj_sample\", ThreddsCode.USWC_1KM_HOURLY, (\"2019-01-01T00\", \"2021-01-01T00\", 300), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_plume\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_plume\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tj_plume\", ThreddsCode.USWC_6KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tijuana_river\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river\", ThreddsCode.USWC_2KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river\", ThreddsCode.USWC_6KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"tijuana_river_small\", ThreddsCode.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
+    "#     (\"tijuana_river_now\", ThreddsCode.USWC_1KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river_now\", ThreddsCode.USWC_2KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river_now\", ThreddsCode.USWC_6KM_HOURLY, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"missing_buoy\", ThreddsCode.USWC_6KM_HOURLY, (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
     "]\n",
     "\n",
     "\n",
@@ -122,12 +122,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "regions = []\n",
     "for rd in region_data:\n",
-    "    dataset = thredds_utils.get_thredds_dataset(rd[1], rd[2], rd[3], rd[4], inclusive=rd[5])\n",
+    "    dataset = get_thredds_dataset(rd[1], rd[2], rd[3], rd[4], inclusive=rd[5])\n",
     "    new_reg = {\"name\": rd[0], \"dataset\": dataset}\n",
     "    regions.append(new_reg)\n",
     "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
@@ -139,9 +141,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for r in regions:\n",
+    "for i, r in enumerate(regions):\n",
     "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR)\n",
-    "    filename = f\"{r['name']}.nc\"\n",
+    "    filename = f\"{r['name']}_{region_data[i][1]}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
     "    print(f\"saved to {save_dir / filename}\")\n",
