--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -94,18 +94,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_root = Path(\"/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/current_netcdfs\")\n",
+    "files_root = Path(\"current_netcdfs\")\n",
     "\n",
-    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-08.nc\")\n",
+    "target = HFRGrid(files_root / \"tj_plume_2020-02_ThreddsCode.USWC_1KM_HOURLY.nc\")\n",
     "\n",
     "interp_references = [\n",
-    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-08.nc\"),\n",
-    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-08.nc\"),\n",
+    "    HFRGrid(files_root / \"tj_plume_2020-02_ThreddsCode.USWC_2KM_HOURLY.nc\"),\n",
+    "    HFRGrid(files_root / \"tj_plume_2020-02_ThreddsCode.USWC_6KM_HOURLY.nc\"),\n",
     "]\n",
     "\n",
     "# mask_nc can be none if you do not need to filter out land currents\n",
     "mask_nc = None\n",
-    "mask_nc = HFRGrid(files_root / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
+    "mask_nc = HFRGrid(files_root / \"tj_sample_ThreddsCode.USWC_1KM_HOURLY.nc\", init_fs=False)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "gapfiller = Gapfiller()\n",
-    "gapfiller.add_steps(InterpolationStep(interp_references), SmoothnStep())"
+    "gapfiller.add_steps(InterpolationStep(interp_references), SmoothnStep(mask=mask_nc))"
    ]
   },
   {
