--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -63,7 +63,7 @@
     "    ds = read_netcdf_info(cfg[\"netcdf_path\"])\n",
     "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"][\"gapfill_steps\"])\n",
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
-    "    grids.append(HFRGrid(ds))\n",
+    "    grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}))\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
