hunington spill simulations and fixes

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -52,9 +52,12 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
+    "#     \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
+    "    \"hunington_spill_elly.json\",\n",
+    "    \"hunington_spill_elbow.json\",\n",
+    "    \"hunington_spill_leg.json\"\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
@@ -63,7 +66,16 @@
     "    ds = read_netcdf_info(cfg[\"netcdf_path\"])\n",
     "    gapfiller = Gapfiller.load_from_config(*cfg[\"netcdf_path\"][\"gapfill_steps\"])\n",
     "    ds = gapfiller.execute(HFRGrid(ds))\n",
-    "    grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}))\n",
+    "    bound_cond = cfg[\"parcels_config\"].get(\"boundary\", None)\n",
+    "    if bound_cond is None:\n",
+    "        grids.append(HFRGrid(ds))\n",
+    "    elif bound_cond.lower() in (\"free\", \"freeslip\"):\n",
+    "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"freeslip\", \"V\": \"freeslip\"}}))\n",
+    "    elif bound_cond.lower() in (\"partial\", \"partialslip\"):\n",
+    "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"partialslip\", \"V\": \"partialslip\"}}))\n",
+    "    else:\n",
+    "        grids.append(HFRGrid(ds))\n",
+    "        \n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
@@ -173,7 +185,8 @@
     "        sim.parcels_result.generate_all_plots(\n",
     "            os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name),\n",
     "            domain=plotting_cfg[\"shown_domain\"],\n",
-    "            land=plotting_cfg[\"draw_coasts\"]\n",
+    "            land=plotting_cfg[\"draw_coasts\"],\n",
+    "            figsize=(13, 8)\n",
     "        )\n",
     "        # comment out the generate_gif line if it doesn't work\n",
     "        print(sim.parcels_result.generate_gif(os.path.join(plotting_cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))"
