More modifications, fixes from hunington spill
Wind modification, particle multiplier, edits to random walk kernel (unfixed lol)

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -55,9 +55,10 @@
     "#     \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "    \"hunington_spill_elly.json\",\n",
-    "    \"hunington_spill_elbow.json\",\n",
-    "    \"hunington_spill_leg.json\"\n",
+    "#     \"hunington_spill_elly.json\",\n",
+    "#     \"hunington_spill_elbow.json\",\n",
+    "#     \"hunington_spill_leg.json\",\n",
+    "    \"hunington_spill_new.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
@@ -74,8 +75,64 @@
     "    elif bound_cond.lower() in (\"partial\", \"partialslip\"):\n",
     "        grids.append(HFRGrid(ds, fs_kwargs={\"interp_method\": {\"U\": \"partialslip\", \"V\": \"partialslip\"}}))\n",
     "    else:\n",
-    "        grids.append(HFRGrid(ds))\n",
-    "        \n",
+    "        grids.append(HFRGrid(ds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "grids[0].modify_with_wind(xr.open_dataset(\"current_netcdfs/Hunington_wind.nc\"), ratio=0.03)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import xarray as xr\n",
+    "# import numpy as np\n",
+    "# from parcels import Field\n",
+    "\n",
+    "# ds = xr.open_dataset(\"current_netcdfs/Hunington_wind.nc\")\n",
+    "# u = ds[\"U\"].values\n",
+    "# v = ds[\"V\"].values\n",
+    "\n",
+    "# lon_len = len(grids[0].fieldset.U.lon)\n",
+    "# lat_len = len(grids[0].fieldset.U.lat)\n",
+    "# wind_u_fld = Field(\n",
+    "#     \"WU\",\n",
+    "#     np.tile(u.reshape((-1, 1, 1)), (1, lat_len, lon_len)),\n",
+    "#     lat=grids[0].fieldset.U.lat,\n",
+    "#     lon=grids[0].fieldset.U.lon,\n",
+    "#     time=(ds[\"time\"].values - ds[\"time\"].values[0]) / np.timedelta64(1, \"s\"),\n",
+    "#     interp_method=\"nearest\"\n",
+    "# )\n",
+    "# wind_v_fld = Field(\n",
+    "#     \"WV\",\n",
+    "#     np.tile(v.reshape((-1, 1, 1)), (1, lat_len, lon_len)),\n",
+    "#     lat=grids[0].fieldset.U.lat,\n",
+    "#     lon=grids[0].fieldset.U.lon,\n",
+    "#     time=(ds[\"time\"].values - ds[\"time\"].values[0]) / np.timedelta64(1, \"s\"),\n",
+    "#     interp_method=\"nearest\"\n",
+    "# )\n",
+    "\n",
+    "# grids[0].fieldset.add_field(wind_u_fld)\n",
+    "# grids[0].fieldset.add_field(wind_v_fld)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
@@ -184,8 +241,8 @@
     "            add_feature_set_to_result(sim.parcels_result, plotting_cfg[\"plot_feature_set\"])\n",
     "        sim.parcels_result.generate_all_plots(\n",
     "            os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name),\n",
-    "            domain=plotting_cfg[\"shown_domain\"],\n",
-    "            land=plotting_cfg[\"draw_coasts\"],\n",
+    "            domain=plotting_cfg.get(\"shown_domain\", None),\n",
+    "            land=plotting_cfg.get(\"draw_coasts\", False),\n",
     "            figsize=(13, 8)\n",
     "        )\n",
     "        # comment out the generate_gif line if it doesn't work\n",
