More wind data testing

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -81,6 +81,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xarray as xr\n",
+    "grids[0].modify_with_wind(xr.open_dataset(\"current_netcdfs/GFS_PointSource_Winds.nc\"), ratio=0.04)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
