--- a/load_wind.ipynb
+++ b/load_wind.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dc7e7131",
+   "metadata": {},
+   "source": [
+    "# from txt file from national data buoy center"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "87833907",
@@ -92,6 +100,74 @@
    "outputs": [],
    "source": [
     "ds.to_netcdf(\"current_netcdfs/Hunington_wind.nc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "670c8698",
+   "metadata": {},
+   "source": [
+    "# different format, .mat file lol\n",
+    "\n",
+    "please help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5bdd24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.io import loadmat\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "import datetime\n",
+    "\n",
+    "winds = loadmat(\"current_netcdfs/GFS_PointSource_winds.mat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fda0262",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "converted = [datetime.datetime.strptime(t, '%m-%d-%Y %H:%M') for t in winds[\"time_str\"]]\n",
+    "times = np.array(converted, dtype=np.datetime64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49240a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = xr.DataArray(winds[\"u\"].squeeze(), coords={\"time\": times})\n",
+    "v = xr.DataArray(winds[\"v\"].squeeze(), coords={\"time\": times})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "224cecae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = xr.Dataset({\"U\": u, \"V\": v})\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89311ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.to_netcdf(\"current_netcdfs/GFS_PointSource_Winds.nc\")"
    ]
   }
  ],
