more hunington runs

--- a/load_wind.ipynb
+++ b/load_wind.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"current_netcdfs/PRJC1.txt\", r\" +\")\n",
+    "df = pd.read_csv(\"current_netcdfs/ndbc_46025_wind.txt\", r\" +\")\n",
     "# units row, drop\n",
     "df = df.drop(0)\n",
     "df = df.drop(df[df[\"WDIR\"] == \"MM\"].index)\n",
@@ -43,8 +43,8 @@
    "source": [
     "# notes: wind direction is where wind is coming from, pointing in opposite direction\n",
     "# 3% of wspd added to ocean vector\n",
-    "uw_obs = -df['WSPD'].astype(float).values * np.sin(np.deg2rad(df['WDIR'].astype(int).values))\n",
-    "vw_obs = -df['WSPD'].astype(float).values * np.cos(np.deg2rad(df['WDIR'].astype(int).values))"
+    "uw_obs = -df['WSPD'].astype(float).values * np.sin(np.deg2rad(df['WDIR'].astype(float).values))\n",
+    "vw_obs = -df['WSPD'].astype(float).values * np.cos(np.deg2rad(df['WDIR'].astype(float).values))"
    ]
   },
   {
@@ -54,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timestamp = df[\"#YY\"] + \"-\" + df[\"MM\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
+    "# the column names are different oh god why\n",
+    "timestamp = df[\"%YY\"] + \"-\" + df[\"0.0\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
     "timestamp = pd.to_datetime(timestamp)"
    ]
   },
@@ -99,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.to_netcdf(\"current_netcdfs/Hunington_wind.nc\")"
+    "ds.to_netcdf(\"current_netcdfs/ndbc_46025_wind.nc\")"
    ]
   },
   {
