--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -58,7 +58,8 @@
     "#     \"hunington_spill_elly.json\",\n",
     "#     \"hunington_spill_elbow.json\",\n",
     "#     \"hunington_spill_leg.json\",\n",
-    "    \"hunington_spill_new.json\",\n",
+    "#     \"hunington_spill_new.json\",\n",
+    "    \"hunington_spill_offshore.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
@@ -85,7 +86,7 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "grids[0].modify_with_wind(xr.open_dataset(\"current_netcdfs/GFS_PointSource_Winds.nc\"), ratio=0.04)"
+    "grids[0].modify_with_wind(xr.open_dataset(\"current_netcdfs/ndbc_46025_wind.nc\"), ratio=0.03)"
    ]
   },
   {
