some cleaning to wind loading notebook

--- a/load_wind.ipynb
+++ b/load_wind.ipynb
@@ -5,7 +5,9 @@
    "id": "dc7e7131",
    "metadata": {},
    "source": [
-    "# from txt file from national data buoy center"
+    "# from txt file from national data buoy center\n",
+    "\n",
+    "https://www.ndbc.noaa.gov/"
    ]
   },
   {
@@ -17,7 +19,10 @@
    "source": [
     "import pandas as pd\n",
     "import xarray as xr\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "infile = \"current_netcdfs/ndbc_46025_wind.txt\"\n",
+    "outfile = \"current_netcdfs/ndbc_46025_wind.nc\""
    ]
   },
   {
@@ -27,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"current_netcdfs/ndbc_46025_wind.txt\", r\" +\")\n",
+    "df = pd.read_csv(infile, r\" +\")\n",
     "# units row, drop\n",
     "df = df.drop(0)\n",
     "df = df.drop(df[df[\"WDIR\"] == \"MM\"].index)\n",
@@ -44,51 +49,18 @@
     "# notes: wind direction is where wind is coming from, pointing in opposite direction\n",
     "# 3% of wspd added to ocean vector\n",
     "uw_obs = -df['WSPD'].astype(float).values * np.sin(np.deg2rad(df['WDIR'].astype(float).values))\n",
-    "vw_obs = -df['WSPD'].astype(float).values * np.cos(np.deg2rad(df['WDIR'].astype(float).values))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "222ffc18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "vw_obs = -df['WSPD'].astype(float).values * np.cos(np.deg2rad(df['WDIR'].astype(float).values))\n",
+    "\n",
     "# the column names are different oh god why\n",
     "timestamp = df[\"%YY\"] + \"-\" + df[\"0.0\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
-    "timestamp = pd.to_datetime(timestamp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0345159f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "timestamp = pd.to_datetime(timestamp)\n",
+    "\n",
     "new_df = pd.DataFrame({\"time\": timestamp, \"u\": uw_obs, \"v\": vw_obs})\n",
     "new_df = new_df.sort_values(by=\"time\")\n",
-    "new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ba57152",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "u = xr.DataArray(new_df[\"u\"], coords={\"time\": new_df[\"time\"]})\n",
-    "v = xr.DataArray(new_df[\"v\"], coords={\"time\": new_df[\"time\"]})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84a860d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "v = xr.DataArray(new_df[\"v\"], coords={\"time\": new_df[\"time\"]})\n",
+    "\n",
     "ds = xr.Dataset({\"U\": u, \"V\": v})\n",
     "ds"
    ]
@@ -100,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.to_netcdf(\"current_netcdfs/ndbc_46025_wind.nc\")"
+    "ds.to_netcdf(outfile)"
    ]
   },
   {
@@ -110,7 +82,9 @@
    "source": [
     "# different format, .mat file lol\n",
     "\n",
-    "please help"
+    "please help\n",
+    "\n",
+    "generated mat files from GFS data will have U and V components created from John's code"
    ]
   },
   {
@@ -125,38 +99,22 @@
     "import xarray as xr\n",
     "import datetime\n",
     "\n",
-    "winds = loadmat(\"current_netcdfs/GFS_PointSource_winds_188_3325.mat\")"
+    "infile = \"current_netcdfs/GFS_PointSource_winds_188_3325.mat\"\n",
+    "outfile = \"current_netcdfs/GFS_PointSource_Winds_188_3325.nc\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fda0262",
+   "id": "d14ac950",
    "metadata": {},
    "outputs": [],
    "source": [
+    "winds = loadmat(infile)\n",
     "converted = [datetime.datetime.strptime(t, '%m-%d-%Y %H:%M') for t in winds[\"time_str\"]]\n",
-    "times = np.array(converted, dtype=np.datetime64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49240a8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "times = np.array(converted, dtype=np.datetime64)\n",
     "u = xr.DataArray(winds[\"u\"].squeeze(), coords={\"time\": times})\n",
-    "v = xr.DataArray(winds[\"v\"].squeeze(), coords={\"time\": times})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "224cecae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "v = xr.DataArray(winds[\"v\"].squeeze(), coords={\"time\": times})\n",
     "ds = xr.Dataset({\"U\": u, \"V\": v})\n",
     "ds"
    ]
@@ -168,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.to_netcdf(\"current_netcdfs/GFS_PointSource_Winds_188_3325.nc\")"
+    "ds.to_netcdf(outfile)"
    ]
   }
  ],
