more comments and cleaning i guess

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -115,7 +115,10 @@
    "outputs": [],
    "source": [
     "gapfiller = Gapfiller()\n",
-    "gapfiller.add_steps(InterpolationStep(interp_references), SmoothnStep(mask=mask_nc))"
+    "gapfiller.add_steps(\n",
+    "    InterpolationStep(interp_references),\n",
+    "    SmoothnStep(mask=mask_nc)\n",
+    ")"
    ]
   },
   {
