--- a/load_wind.ipynb
+++ b/load_wind.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6ce4c416",
+   "metadata": {},
+   "source": [
+    "# converting wind files into NetCDF\n",
+    "\n",
+    "It's easiest if wind data is converted into a constant file type, so NetCDF it is.\n",
+    "\n",
+    "Different sections of the notebook will have different code on converting files from different sources.\n",
+    "\n",
+    "The simulations only support NetCDF data right now, sooooooo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc7e7131",
    "metadata": {},
    "source": [
-    "# from txt file from national data buoy center\n",
+    "## from txt file from national data buoy center\n",
     "\n",
     "https://www.ndbc.noaa.gov/"
    ]
@@ -14,7 +28,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "87833907",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T20:26:10.051693Z",
+     "start_time": "2021-10-12T20:26:10.048629Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -29,7 +48,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "df7299de",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T20:26:10.228899Z",
+     "start_time": "2021-10-12T20:26:10.208524Z"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(infile, r\" +\")\n",
@@ -43,7 +67,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f31ab685",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-12T20:26:10.468976Z",
+     "start_time": "2021-10-12T20:26:10.423855Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# notes: wind direction is where wind is coming from, pointing in opposite direction\n",
@@ -52,7 +81,7 @@
     "vw_obs = -df['WSPD'].astype(float).values * np.cos(np.deg2rad(df['WDIR'].astype(float).values))\n",
     "\n",
     "# the column names are different oh god why\n",
-    "timestamp = df[\"%YY\"] + \"-\" + df[\"0.0\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
+    "timestamp = df[\"%YY\"] + \"-\" + df[\"MM\"] + \"-\" + df[\"DD\"] + \"T\" + df[\"hh\"] + \":\" + df[\"mm\"]\n",
     "timestamp = pd.to_datetime(timestamp)\n",
     "\n",
     "new_df = pd.DataFrame({\"time\": timestamp, \"u\": uw_obs, \"v\": vw_obs})\n",
@@ -80,9 +109,7 @@
    "id": "670c8698",
    "metadata": {},
    "source": [
-    "# different format, .mat file lol\n",
-    "\n",
-    "please help\n",
+    "## converting from .mat file lol\n",
     "\n",
     "generated mat files from GFS data will have U and V components created from John's code"
    ]
