--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -53,18 +53,9 @@
    "source": [
     "configs = [\n",
     "#     \"plume_track.json\",\n",
-    "    \"tijuana_now.json\",\n",
+    "#     \"tijuana_now.json\",\n",
     "#     \"buoy_track_704_02.json\",\n",
-    "#     \"hunington_spill_elly.json\",\n",
-    "#     \"hunington_spill_elbow.json\",\n",
-    "#     \"hunington_spill_leg.json\",\n",
-    "#     \"hunington_spill_new.json\",\n",
-    "#     \"hunington_spill_offshore.json\",\n",
-    "#     \"hunington_satellite/hunington_RADARSAT2.json\",\n",
-    "#     \"hunington_satellite/hunington_ICEYE.json\",\n",
-    "#     \"hunington_satellite/hunington_SENTINEL1B.json\",\n",
-    "#     \"hunington_satellite/hunington_SENTINEL1A.json\",\n",
-    "#     \"hunington_satellite/hunington_all.json\",\n",
+    "    \"hunington_all.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
