Clean up notebooks

--- a/coord_to_mat.ipynb
+++ b/coord_to_mat.ipynb
@@ -1,14 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# store coordinates in a .mat file\n",
+    "\n",
+    "Stores the coordinates used in a NetCDF HFR file into a grid in a mat file.\n",
+    "\n",
+    "Used to test the original plume tracker"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-10T20:31:55.152734Z",
-     "start_time": "2020-09-10T20:31:55.148366Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -21,13 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-10T20:35:22.589032Z",
-     "start_time": "2020-09-10T20:35:22.509960Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "file = get_file_info(utils.CURRENT_NETCDF_DIR / \"west_coast_1km_hourly/tj_plume_interped.nc\", 1, name=\"tj_plume\")\n",
@@ -37,13 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-10T20:47:19.663295Z",
-     "start_time": "2020-09-10T20:47:19.659324Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "mat_dict = {\n",
@@ -54,13 +50,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-10T20:47:20.211434Z",
-     "start_time": "2020-09-10T20:47:20.207446Z"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "scipy.io.savemat(utils.MATLAB_DIR / \"sdcodargrid_new.mat\", mat_dict)"
@@ -69,9 +60,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_parcels",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3_parcels"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -83,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
