--- a/fieldset_compare.ipynb
+++ b/fieldset_compare.ipynb
@@ -191,6 +191,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "distribution of measure differences"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -202,6 +209,13 @@
     "plt.hist(mag_diff[np.where(~np.isnan(mag_diff))].flatten())\n",
     "plt.title(\"magnitude differences (m/s)\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "generate heatmaps of measure differences"
    ]
   },
   {
@@ -245,9 +259,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_parcels",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "py3_parcels"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -259,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
