--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -2,25 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# load mats into netcdfs from plume tracker"
-   ],
-   "metadata": {}
+    "# load mats into netcdfs from plume tracker\n",
+    "\n",
+    "if you have a directory of .mat file versions of the HFR data, this notebook converts those into a single NetCDF file"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,20 +33,20 @@
     "\n",
     "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "change settings accordingly"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "start_time = np.datetime64(\"2020-08-01T00:00\", \"m\")\n",
     "end_time = np.datetime64(\"2020-08-31T23:00\", \"m\")\n",
@@ -52,13 +56,13 @@
     "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
     "\n",
     "mat_tot_dir = utils.MATLAB_DIR / \"support_data/TrackerOutput/hourly\""
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "TIJUANA_RIVER_DOMAIN = dict(\n",
     "    S=32.528,\n",
@@ -83,22 +87,22 @@
     "coastline = np.array([lats, lons])\n",
     "# just filter out the problematic upper coastline where it goes up and down\n",
     "coastline = coastline[:, :288]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "plt.scatter(coastline[1], coastline[0], s=4)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def coord_inland(coastline, lat, lon):\n",
     "    lower_ind = np.where(coastline[0] <= lat)[0]\n",
@@ -167,13 +171,22 @@
     "        }\n",
     "    )\n",
     "    return ds"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "concatenates all the separate .mat files into a single dataset"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "ds_total = None\n",
     "current_time = start_time\n",
@@ -190,40 +203,40 @@
     "    else:\n",
     "        print(f\"file {filename} not found\")\n",
     "    current_time += incr"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# display fieldset to see if data was loaded correctly\n",
     "fs = xr_dataset_to_fieldset(ds_total)\n",
     "fs.U.show()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "date_parsed, _ = parse_time(start_time)\n",
     "saveto = utils.FILES_ROOT / f\"current_netcdfs/Tot_SDLJ_{date_parsed}.nc\"\n",
     "ds_total.to_netcdf(saveto)\n",
     "print(f\"saved to {saveto}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
+   "display_name": "py3-parcels",
+   "language": "python",
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -236,9 +249,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
-  },
-  "interpreter": {
-   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   }
  },
  "nbformat": 4,
