--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -115,63 +115,11 @@
    "outputs": [],
    "source": [
     "gapfiller = Gapfiller()\n",
+    "# ADD GAPFILLING STEPS HERE\n",
     "gapfiller.add_steps(\n",
     "    InterpolationStep(interp_references),\n",
     "    SmoothnStep(mask=mask_nc)\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### interpolation type\n",
-    "\n",
-    "more information can be found in the `tutorial_interpolation` notebook\n",
-    "\n",
-    "EDIT: just use `linear`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## nan values and parcels\n",
-    "\n",
-    "note that when this xarray Dataset is passed into parcels, all the nan values change to 0 and the mask generation won't work anymore\n",
-    "\n",
-    "so the Dataset is copied for use with the FieldSet instead"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### use of Parcels Field for interpolation\n",
-    "\n",
-    "indexing Field values goes [time, depth, lat, lon]\n",
-    "\n",
-    "Field does linear interpolation automatically when indexing values between it's coordinate values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### linear interpolation using lower resolution data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## even more filling with PLS and smoothing with DCT shenanigans\n",
-    "\n",
-    "uses the matlab engine and smoothn.m\n",
-    "\n",
-    "https://www.mathworks.com/help/matlab/matlab-engine-for-python.html\n",
-    "\n",
-    "https://www.mathworks.com/matlabcentral/fileexchange/25634-smoothn"
    ]
   },
   {
